# butterflow

./: .gitignore  Cargo.toml  README.md  demo.py  main.py  pyproject.toml  shell.nix
docs/: examples.txt
docs-data/: close.txt  todo.txt
docs-stdlib/: abs.txt  add.txt  clip.txt  const.txt  cs_rank.txt  cs_zscore.txt  divide.txt  equals.txt  greater.txt  less.txt  max.txt  mid.txt  min.txt  multiply.txt  subtract.txt  tail_to_nan.txt  tradewhen.txt  ts_argmax.txt  ts_argmin.txt  ts_argminmax.txt  ts_decay_exp.txt  ts_decay_linear.txt  ts_delay.txt  ts_diff.txt  ts_ffill.txt  ts_mae.txt  ts_max.txt  ts_mean.txt  ts_min.txt  ts_rank.txt  ts_std.txt  ts_sum.txt  ts_zscore.txt  where.txt
src/: definitions.rs  graph.rs  lib.rs  typesystem.rs
src/butterflow/: __init__.py  build.py  operators.py  parser.py  runtime.py  typechecker.py  typesystem.py
src/compiler/: ast.rs  grammar.pest  graph_builder.rs  lexer.rs  mod.rs  parser.rs  typechecker.rs
src/runtime/: engine.rs  mod.rs
src/stdlib/: imp.rs  mod.rs  registry.rs
technical_indicators/: adl.butter  adl.eqn  adl.json  adx.butter  adx.eqn  adx.json  aroon.butter  aroon.eqn  aroon.json  atr.butter  awesome.butter  cci.butter  chaikin.butter  envelope.butter  ichimoku.butter  kdj.butter  keltner.butter  macd.butter  mfi.butter  obf.butter  psar.butter  rsi.butter  rvi.butter  stochkd.butter  stochrsi.butter  tema.eqn  tema.json  vwap.butter  vwap.eqn  vwap.json
tests/: test_indicator_mfm.py  test_operators.py  test_tradewhen.py
