[package]
name = "butterflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive"] }
ndarray = "0.16.1"
pest = "2.7.15"
pest_derive = "2.7.15"
polars = "0.46.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
regex = "1.10.3"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[[bin]]
name = "butterflow-compile"
path = "src/bin/compile.rs"

[[bin]]
name = "butterflow-runtime"
path = "src/bin/runtime.rs"

[[bin]]
name = "butterflow-visualize"
path = "src/bin/visualize.rs"

[[bin]]
name = "butterflow-validate"
path = "src/bin/validate.rs"
