[project]
name = "butterflow"
version = "0.1.2"
description = "Language for a quant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "scipy>=1.16.3",
]
authors = [
{ name = "Jongkook Choi", email = "jongkook90@hotmail.com" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/butterflow"]
# [project.scripts]
# cli = project.module:main